@@ -96,6 +96,7 @@
 - added: `U.decryptUID(value, key)` for encrypting number/string values
 - added: `U.encryptUID(value, key)` for decrypting of number/string values
 - added: `F.config['secret-uid']` as a hidden secret for encrypting/decrypting values
+- added: `F.dir(path)` for changing of root directory
 
 - updated: (IMPORTANT) NoSQL binary divides files to independent directories for 1000 files per directory
 - updated: `GROUP()` by adding a new argument `url_prefix`
